--- a/package.json
+++ b/package.json
@@ -1,44 +1,31 @@
 {
-  "name": "my-app",
+  "name": "video-chat-app-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "apollo-cache-inmemory": "^1.1.9",
- "apollo-client": "^2.2.5",
- "apollo-client-preset": "^1.0.8",
- "apollo-link-http": "^1.4.0",
- "apollo-link-schema": "^1.0.6",
- "apollo-link-ws": "^1.0.7",
- "apollo-utilities": "^1.0.10",
- "classnames": "^2.2.5",
- "react-apollo": "^2.0.4",
- "react-redux": "^5.0.7",
- "react-router": "^4.2.0",
- "react-router-config": "^1.0.0-beta.4",
- "react-router-dom": "^4.2.2",
- "react-stay-scrolled": "^2.1.1",
- "redux": "^3.7.2",
- "redux-actions": "^2.2.1",
- "redux-devtools-extension": "^2.13.2",
- "redux-thunk": "^2.2.0",
- "socket.io": "^2.4.0",
- "socket.io-client": "^2.0.4",
- "socket.io-redis": "^5.2.0",
- "socketio-jwt": "^4.5.0",
- "style-loader": "^0.20.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "add": "^2.0.6",
+    "install": "^0.13.0",
+    "npm": "^7.23.0",
+    "peerjs": "^1.3.2",
+    "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-router-dom": "^5.3.0",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "simple-peer": "^9.11.0",
+    "socket.io-client": "^4.2.0",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build && echo '/* /index.html  200' | cat >build/_redirects ",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
